fix thread overflow on mobile

--- a/client/src/components/post/comments/Thread.module.scss
+++ b/client/src/components/post/comments/Thread.module.scss
@@ -2,13 +2,17 @@
 
 .ThreadGrid {
   display: grid;
-  grid-template-columns: 1.5rem auto;
+  grid-template-columns: 1.5rem calc(100% - 2.1rem);
   grid-template-rows: 1.5rem auto;
   grid-template-areas:
     "pic header"
     "collapser thread";
   column-gap: 0.6rem;
   row-gap: 0.6rem;
+  @media only screen and (max-width: 30rem) {
+    row-gap: 0.3rem;
+    column-gap: 0.3rem;
+  }
 }
 
 .ThreadBody {
@@ -31,14 +35,6 @@
   grid-area: thread;
   margin-top: 0.5rem;
   gap: 0.4rem;
-}
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 46rem) {
-  .ThreadGrid {
-    row-gap: 0.1rem;
-    column-gap: 0.5rem;
-  }
 }
 
 .ThreadCommentContext {
